--- a/editor.html
+++ b/editor.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="js/select2.min.js"></script>
     <script type="text/javascript" src="js/jquery.SuperSlide.2.1.js"></script>
     <script type="text/javascript" src="js/icheck.min.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
     <style type="text/css">
         #head{ background: #fff; }
         .nav_shu .nLi h3 a { color: #333; }
@@ -279,18 +280,18 @@ $(function(){
         $(this).parent().parent().find('.radio_item').removeClass('current');
         $(this).addClass('current');
         return false;
-    });     
+    });
 });
 
 </script>
 <script type="text/javascript">
     $(function(){
-        /*icheck js*/  
+        /*icheck js*/
         $('input.icheck').iCheck({
             checkboxClass: 'icheckbox_flat-red',
             radioClass: 'iradio_flat-red'
         });
-    }) 
+    })
 </script>
 </body>
 </html>
