--- a/idea_details.html
+++ b/idea_details.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="js/jquery1.91.min.js"></script>
     <script type="text/javascript" src="js/select2.min.js"></script>
     <script type="text/javascript" src="js/jquery.SuperSlide.2.1.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
 
 </head>
 <body>
@@ -59,7 +60,7 @@
         <div class="title">
             <h2 class="caption">克尼坦泰</h2>
             <p class="date">2019/06/12</p>
-                
+
         </div>
         <p class="desc">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
         <div class="focus">
@@ -244,14 +245,14 @@
 <script type="text/javascript" src="js/jquery.nicescroll.js"></script>
 <script type="text/javascript">
 //滚动条
-$(".zScroll").niceScroll({  
+$(".zScroll").niceScroll({
     cursorcolor:"#888888",  //滚动条颜色
-    cursoropacitymax:.5,   //滚动条透明度 
+    cursoropacitymax:.5,   //滚动条透明度
     touchbehavior:true,  //是否允许触摸滚动
     cursorwidth:"5px",   //滚动条宽度
     cursorborder:"0",   //滚动条边框
     cursorborderradius:"5px"  //滚动条圆角
-}); 
+});
 </script>
 
 
