--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="js/select2.min.js"></script>
     <script type="text/javascript" src="js/jquery.SuperSlide.2.1.js"></script>
     <script src='./js/functions.min.js'></script>
+    <script type="text/javascript" src="js/common.js"></script>
     <style type="text/css">
         body {
             background: url(images/beijing.jpg) no-repeat center;
