首页轮播数据获取渲染

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/select2.min.js"></script>
     <script type="text/javascript" src="js/jquery.SuperSlide.2.1.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
+    <script type="text/javascript" src="js/view/index.js"></script>
 </head>
 <body>
 <!--[if lte IE 8]>
@@ -74,76 +75,7 @@
                 <!--大切换图start-->
                 <div id="indexslider">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide" style=" background-image:url(images/lunbo01.jpg);">
-                            <div class="info txt-l">
-                                <div class="title mb20">
-                                    <h2 class="caption">泰坦尼克</h2>
-                                    <p class="date">2019/06/12</p>
-                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
-                                </div>
-                                <p class="desc">泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide" style=" background-image:url(images/banner_small01.jpg);">
-                            <div class="info txt-l">
-                                <div class="title mb20">
-                                    <h2 class="caption">克尼坦泰</h2>
-                                    <p class="date">2019/06/12</p>
-                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
-                                </div>
-                                <p class="desc">克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide" style=" background-image:url(images/lunbo01.jpg);">
-                            <div class="info txt-l">
-                                <div class="title mb20">
-                                    <h2 class="caption">泰坦尼克</h2>
-                                    <p class="date">2019/06/12</p>
-                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
-                                </div>
-                                <p class="desc">泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide" style=" background-image:url(images/banner_small01.jpg);">
-                            <div class="info txt-l">
-                                <div class="title mb20">
-                                    <h2 class="caption">克尼坦泰</h2>
-                                    <p class="date">2019/06/12</p>
-                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
-                                </div>
-                                <p class="desc">克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide" style=" background-image:url(images/lunbo01.jpg);">
-                            <div class="info txt-l">
-                                <div class="title mb20">
-                                    <h2 class="caption">泰坦尼克</h2>
-                                    <p class="date">2019/06/12</p>
-                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
-                                </div>
-                                <p class="desc">泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </div>
+                        <!-- 轮播swiper item -->
                     </div>
                     <div class="hd ease-3 txt-c">
                         <ul></ul>
