--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="ie7_hints">温馨提示：您所使用的浏览器版本过低，为保证账户安全和浏览体验建议升级为最新版本浏览器</div>
 <![endif]-->
 <!--头部start-->
-<div class="ease-3" id="head">
+<div class="ease-3 index-header" id="head">
     <div class="nr w1200 clearfix mar0">
         <div class="fl"><a class="logo" href="index.html" title=""><img src="images/logo.png" alt="" /></a></div>
         <div class="fl">
