--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="ie7_hints">温馨提示：您所使用的浏览器版本过低，为保证账户安全和浏览体验建议升级为最新版本浏览器</div>
 <![endif]-->
 <!--头部start-->
-<div class="ease-3 index-header" id="head">
+<div class="ease-3" id="head">
     <div class="nr w1200 clearfix mar0">
         <div class="fl"><a class="logo" href="index.html" title=""><img src="images/logo.png" alt="" /></a></div>
         <div class="fl">
@@ -75,7 +75,48 @@
                 <!--大切换图start-->
                 <div id="indexslider">
                     <div class="swiper-wrapper">
-                        <!-- 轮播swiper item -->
+                        <div class="swiper-slide" style=" background-image:url(images/lunbo01.jpg);">
+                            <div class="info txt-l">
+                                <div class="title mb20">
+                                    <h2 class="caption">泰坦尼克</h2>
+                                    <p class="date">2019/06/12</p>
+                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
+                                </div>
+                                <p class="desc">泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情</p>
+                                <div class="focus">
+                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
+                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide" style=" background-image:url(images/banner_small01.jpg);">
+                            <div class="info txt-l">
+                                <div class="title mb20">
+                                    <h2 class="caption">克尼坦泰</h2>
+                                    <p class="date">2019/06/12</p>
+                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
+                                </div>
+                                <p class="desc">克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰</p>
+                                <div class="focus">
+                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
+                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide" style=" background-image:url(images/lunbo01.jpg);">
+                            <div class="info txt-l">
+                                <div class="title mb20">
+                                    <h2 class="caption">泰坦尼克</h2>
+                                    <p class="date">2019/06/12</p>
+                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
+                                </div>
+                                <p class="desc">泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情</p>
+                                <div class="focus">
+                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
+                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="hd ease-3 txt-c">
                         <ul></ul>
@@ -279,25 +320,7 @@
     </div>
 </div>
 <script type="text/javascript">
-// 轮播图
-$("#indexslider").slide({
-    titCell: ".hd ul",
-    autoPage: true,  //是否使用自动显示分页
-    mainCell:".swiper-wrapper",
-    autoPlay:true,
-    effect:"fold",   //特效left,leftLoop,topLoop,top,fade（支持响应窗口大小）,
-    easing:"easeOutCirc",  //缓动效果 easeInQuint,easeInBack,easeOutBounce,easeOutElastic
-    trigger:"mouseover",   //触发方式  mouseover,click
-    delayTime:1000,  //延迟时间
-    interTime:5000,  //间隔时间
-    triggerTime:0,
-    pnLoop:true,   //前后按钮循环，默认true
-    mouseOverStop:true   //鼠标经过停止播放，默认true
-    /*startFun:function(i,c,slider, titCell, mainCell, targetCell, prevCell, nextCell){
-        $('#indexslider .swiper-wrapper .swiper-slide').eq(i).addClass("enter").siblings().removeClass("enter");
-    }*/
-});
-$(function(){
+    $(function(){
     $(".searchMenu").mouseover(function(){
         $("#searchTab").slideDown(100);
         $(this).addClass("searchOpen");
