试玩游戏最新列表渲染

--- a/index.html
+++ b/index.html
@@ -74,49 +74,9 @@
             <div class="section index_banner">
                 <!--大切换图start-->
                 <div id="indexslider">
+                    <!-- 轮播部分 -->
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide" style=" background-image:url(images/lunbo01.jpg);">
-                            <div class="info txt-l">
-                                <div class="title mb20">
-                                    <h2 class="caption">泰坦尼克</h2>
-                                    <p class="date">2019/06/12</p>
-                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
-                                </div>
-                                <p class="desc">泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide" style=" background-image:url(images/banner_small01.jpg);">
-                            <div class="info txt-l">
-                                <div class="title mb20">
-                                    <h2 class="caption">克尼坦泰</h2>
-                                    <p class="date">2019/06/12</p>
-                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
-                                </div>
-                                <p class="desc">克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰游戏详情克尼坦泰</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide" style=" background-image:url(images/lunbo01.jpg);">
-                            <div class="info txt-l">
-                                <div class="title mb20">
-                                    <h2 class="caption">泰坦尼克</h2>
-                                    <p class="date">2019/06/12</p>
-                                    <p class="tag"><span><em>RPG</em></span><span><em>射击</em></span></p>
-                                </div>
-                                <p class="desc">泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情泰坦尼克游戏详情</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5">&#xe62b;</i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5">&#xe6b3;</i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                     <div class="hd ease-3 txt-c">
                         <ul></ul>
@@ -128,6 +88,7 @@
             </div>
         </div>
     </div>
+    <!-- 最新列表 -->
     <div class="section">
         <div class="nr w1200 mar0">
             <div class="bt_index clearfix mb10"><h2 class="fl"><i class="icon iconfont txt-red">&#xe601;</i>最新</h2><a href="more.html" class="more ease-1">更多<i class="iconfont ease-3">&#xe617;</i></a></div>
