修改首页tab的标签和样式

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <script type="text/javascript" src="js/jquery.SuperSlide.2.1.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/view/index.js"></script>
+    <style>
+        .indextab {
+            color: #000;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <!--[if lte IE 8]>
@@ -62,9 +68,9 @@
 <div class="mainbody w1200 mar0">
     <div class="submenu">
         <div class="w1200 mar0">
-            <div class="subnav txt-c clearfix">
-                <a href="trial_details.html" class="inlineblock ease-1 on fl"><span>试玩展示</span></a>
-                <a href="idea_details.html" class="inlineblock ease-1 fr"><span>游戏想法</span></a>
+            <div class="subnav indextab txt-c clearfix">
+                <div class="inlineblock tryout ease-1 on fl"><span>试玩展示</span></div>
+                <div class="inlineblock idea ease-1 fr"><span>游戏想法</span></div>
             </div>
         </div>
     </div>
