轮播和最新列表实现tab切换

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div class="mainbody w1200 mar0">
     <div class="submenu">
         <div class="w1200 mar0">
-            <div class="subnav indextab txt-c clearfix">
+            <div class="subnav indextab txt-c clearfix" id="indextab">
                 <div class="inlineblock tryout ease-1 on fl"><span>试玩展示</span></div>
                 <div class="inlineblock idea ease-1 fr"><span>游戏想法</span></div>
             </div>
