--- a/personal_centre.html
+++ b/personal_centre.html
@@ -211,7 +211,7 @@
                         <option value="2">加入的</option>
                         <option value="1">发起的</option>
                     </select>
-                    <a href="editor_publish.html" class="btn btn_small fr btn_blue inlineblock radius-5 fabu">新发布</a>
+                    <a href="javascript:;" class="btn btn_small fr btn_blue inlineblock radius-5 fabu" id="create-team">新发布</a>
                 </div>
                 <ul id="teams">
                     <!--<li>-->
